Update SQL formatter to use github.com/BruceDu521/sql-formatter
